fix spacing on hero and z-index on nav flyout

--- a/static/assets/global.css
+++ b/static/assets/global.css
@@ -20,3 +20,7 @@
   width: 2.5rem;
   height: 2.5rem;
 }
+
+.drawer-end .drawer-toggle ~ .drawer-side {
+  z-index: 999;
+}
